fix(menu): menu-item has :active background-color when horizionta or collapsed

--- a/src/_styles/Menu.scss
+++ b/src/_styles/Menu.scss
@@ -33,12 +33,12 @@
         }
         @include b(menu-item) {
           margin: 0;
-          @include m(selected) {
-            @include once {
-              &::after {
-                background-color: transparent !important;
-              }
+          @include once {
+            &::after {
+              background-color: transparent !important;
             }
+          }
+          @include m(selected) {
             @include b(menu-item-content) {
               border-bottom: 2px solid $--menu-horizontal-border-color;
             }
@@ -66,11 +66,9 @@
     @include m(collapsed) {
       @include b(menu-list) {
         @include b(menu-item) {
-          @include m(selected) {
-            @include once {
-              &::after {
-                background-color: transparent !important;
-              }
+          @include once {
+            &::after {
+              background-color: transparent !important;
             }
           }
         }
